--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,4 +3,5 @@
 <p><a href="/">Home</a></p>
 <p><a href="/about">About</a></p>
 <p><a href="/project">Project</a></p>
+<p><a href="/sam">Samalo</a></p>
 </header>
